Removing column sort on Global Search as Omeka ignores it. Fixing LargeTextField expanded view when click on elipsis. Adjusting some paddings and margins. Setting Datatable and columns width to enable horizontal scrolling.

--- a/src/assets/css/DataTable.css
+++ b/src/assets/css/DataTable.css
@@ -59,6 +59,7 @@
 .datatable-component th.p-filter-column input {
     padding-top: 3.5px;
     padding-bottom: 3.5px;
+    width:  100%;
 }
 
 @media screen and (max-width: 960px) {
