--- a/src/assets/css/SpecialCollections.css
+++ b/src/assets/css/SpecialCollections.css
@@ -28,3 +28,7 @@
 	line-height: 26.4px;
 	color: #093eba;
 }
+
+.p-w-100 {
+	width: 100%;
+}
